--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
 		}
 	],
 	"C_Cpp.errorSquiggles": "Enabled",
-	"C_Cpp.default.intelliSenseMode": "macos-gcc-x64",
+	"C_Cpp.default.intelliSenseMode": "macos-clang-x64",
 	"C_Cpp.default.compilerPath": "/usr/bin/gcc",
 	"C_Cpp.intelliSenseEngineFallback": "Enabled",
 	"C_Cpp.codeAnalysis.runAutomatically": true
