--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 objects/
 build/
 
+# .vscode files that don't need to be commited and/or are regenerated when starting vscode
+.vscode/configurationCache
+.vscode/dryrun.log
+.vscode/targets.log
+
 # Prerequisites
 *.d
 
